// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile Site Settings GET /api/v1/sites/:siteId/site_settings/profile_settings returns address fields 1`] = `
{
  "accepted_terms_of_service": true,
  "accepted_terms_of_service_by": "Nice Person",
  "accepted_terms_of_service_on": "2023-05-10T12:37:38.000Z",
  "address1": null,
  "address_exists": false,
  "address_expired": null,
  "author_bio": "<randomId>-author_bio",
  "author_image": "<randomId>-author_image",
  "author_name": "<randomId>-author_name",
  "brand_color": null,
  "category_id": {
    "created_at": "2023-05-30T00:00:00.000Z",
    "iab_code": "IAB1",
    "id": 1,
    "parent_id": 1,
    "slug": "arts-and-entertainment",
    "title": "Arts & Entertainment",
    "updated_at": "2023-05-30T00:00:00.000Z",
  },
  "category_ids": [],
  "city": null,
  "contact_email": "<randomId>@example.com",
  "country": null,
  "country_of_operation": null,
  "facebook": null,
  "influencer_non_profit_rate": null,
  "influencer_non_profit_work": null,
  "instagram": null,
  "phone_number": "1234567890",
  "pinterest": null,
  "pinterest_email": null,
  "premiere_accepted": null,
  "premiere_invited": null,
  "pro_accepted": "accepted",
  "pro_invited": true,
  "site_description": "<randomId>-site_description",
  "site_id": Any<Number>,
  "site_image": "<randomId>-site_image",
  "site_title": "Test title <randomId>",
  "snapchat": null,
  "state": null,
  "tiktok": null,
  "twitter": null,
  "youtube": null,
  "zipcode": null,
}
`;

exports[`Profile Site Settings GET /api/v1/sites/:siteId/site_settings/profile_settings returns the site profile settings for a premiere site 1`] = `
{
  "accepted_terms_of_service": true,
  "accepted_terms_of_service_by": "Nice Person",
  "accepted_terms_of_service_on": "2023-05-10T12:37:38.000Z",
  "address1": null,
  "address_exists": false,
  "address_expired": null,
  "author_bio": "<randomId>-author_bio",
  "author_image": "<randomId>-author_image",
  "author_name": "<randomId>-author_name",
  "brand_color": null,
  "category_id": {
    "created_at": "2023-05-30T00:00:00.000Z",
    "iab_code": "IAB1",
    "id": 1,
    "parent_id": 1,
    "slug": "arts-and-entertainment",
    "title": "Arts & Entertainment",
    "updated_at": "2023-05-30T00:00:00.000Z",
  },
  "category_ids": [],
  "city": null,
  "contact_email": "<randomId>@example.com",
  "country": null,
  "country_of_operation": null,
  "facebook": null,
  "influencer_non_profit_rate": null,
  "influencer_non_profit_work": null,
  "instagram": null,
  "phone_number": "1234567890",
  "pinterest": null,
  "pinterest_email": null,
  "premiere_accepted": true,
  "premiere_invited": true,
  "premiere_manage_account": true,
  "premiere_net_difference": 175,
  "pro_accepted": null,
  "pro_invited": null,
  "site_description": "<randomId>-site_description",
  "site_id": Any<Number>,
  "site_image": "<randomId>-site_image",
  "site_title": "Test title <randomId>",
  "snapchat": null,
  "state": null,
  "tiktok": null,
  "twitter": null,
  "youtube": null,
  "zipcode": null,
}
`;

exports[`Profile Site Settings GET /api/v1/sites/:siteId/site_settings/profile_settings returns the site profile settings for a user with the ad_settings role 1`] = `
{
  "accepted_terms_of_service": true,
  "accepted_terms_of_service_by": "Nice Person",
  "accepted_terms_of_service_on": "2023-05-10T12:37:38.000Z",
  "address1": null,
  "address_exists": false,
  "address_expired": null,
  "author_bio": "<randomId>-author_bio",
  "author_image": "<randomId>-author_image",
  "author_name": "<randomId>-author_name",
  "brand_color": null,
  "category_id": {
    "created_at": "2023-05-30T00:00:00.000Z",
    "iab_code": "IAB1",
    "id": 1,
    "parent_id": 1,
    "slug": "arts-and-entertainment",
    "title": "Arts & Entertainment",
    "updated_at": "2023-05-30T00:00:00.000Z",
  },
  "category_ids": [],
  "city": null,
  "contact_email": "<randomId>@example.com",
  "country": null,
  "country_of_operation": null,
  "facebook": null,
  "influencer_non_profit_rate": null,
  "influencer_non_profit_work": null,
  "instagram": null,
  "phone_number": "1234567890",
  "pinterest": null,
  "pinterest_email": null,
  "premiere_accepted": null,
  "premiere_invited": null,
  "pro_accepted": null,
  "pro_invited": null,
  "site_description": "<randomId>-site_description",
  "site_id": Any<Number>,
  "site_image": "<randomId>-site_image",
  "site_title": "Test title <randomId>",
  "snapchat": null,
  "state": null,
  "tiktok": null,
  "twitter": null,
  "youtube": null,
  "zipcode": null,
}
`;

exports[`Profile Site Settings GET /api/v1/sites/:siteId/site_settings/profile_settings returns the site profile settings for an admin 1`] = `
{
  "accepted_terms_of_service": true,
  "accepted_terms_of_service_by": "Nice Person",
  "accepted_terms_of_service_on": "2023-05-10T12:37:38.000Z",
  "address1": null,
  "address_exists": false,
  "address_expired": null,
  "author_bio": "<randomId>-author_bio",
  "author_image": "<randomId>-author_image",
  "author_name": "<randomId>-author_name",
  "brand_color": null,
  "category_id": {
    "created_at": "2023-05-30T00:00:00.000Z",
    "iab_code": "IAB1",
    "id": 1,
    "parent_id": 1,
    "slug": "arts-and-entertainment",
    "title": "Arts & Entertainment",
    "updated_at": "2023-05-30T00:00:00.000Z",
  },
  "category_ids": [],
  "city": null,
  "contact_email": null,
  "country": null,
  "country_of_operation": null,
  "facebook": null,
  "influencer_non_profit_rate": null,
  "influencer_non_profit_work": null,
  "instagram": null,
  "phone_number": "1234567890",
  "pinterest": null,
  "pinterest_email": null,
  "premiere_accepted": null,
  "premiere_invited": null,
  "pro_accepted": null,
  "pro_invited": null,
  "site_description": "<randomId>-site_description",
  "site_id": Any<Number>,
  "site_image": "<randomId>-site_image",
  "site_title": "Test title <randomId>",
  "snapchat": null,
  "state": null,
  "tiktok": null,
  "twitter": null,
  "youtube": null,
  "zipcode": null,
}
`;

exports[`Profile Site Settings GET /api/v1/sites/:siteId/site_settings/profile_settings returns the site profile settings for an owner with additional fields and categories 1`] = `
{
  "accepted_terms_of_service": true,
  "accepted_terms_of_service_by": "Nice Person",
  "accepted_terms_of_service_on": "2023-05-10T12:37:38.000Z",
  "address1": "1 Main St",
  "address_exists": true,
  "address_expired": null,
  "author_bio": "<randomId>-author_bio",
  "author_image": "<randomId>-author_image",
  "author_name": "<randomId>-author_name",
  "brand_color": "#100001",
  "category_id": {
    "created_at": "2023-05-30T00:00:00.000Z",
    "iab_code": "IAB5",
    "id": 2,
    "parent_id": null,
    "slug": "education",
    "title": "Education",
    "updated_at": "2023-05-30T00:00:00.000Z",
  },
  "category_ids": [
    {
      "created_at": "2023-05-30T00:00:00.000Z",
      "iab_code": "IAB1",
      "id": 1,
      "parent_id": 1,
      "slug": "arts-and-entertainment",
      "title": "Arts & Entertainment",
      "updated_at": "2023-05-30T00:00:00.000Z",
    },
    {
      "created_at": "2023-05-30T00:00:00.000Z",
      "iab_code": "IAB5",
      "id": 2,
      "parent_id": null,
      "slug": "education",
      "title": "Education",
      "updated_at": "2023-05-30T00:00:00.000Z",
    },
    {
      "created_at": "2023-05-30T00:00:00.000Z",
      "iab_code": "IAB8",
      "id": 5,
      "parent_id": null,
      "slug": "food-and-drink",
      "title": "Food & Drink",
      "updated_at": "2023-05-30T00:00:00.000Z",
    },
  ],
  "city": "Boca Raton",
  "contact_email": "contact-email-override@example.com",
  "country": "US",
  "country_of_operation": "UK",
  "facebook": "<randomId> facebook",
  "influencer_non_profit_rate": 20,
  "influencer_non_profit_work": true,
  "instagram": "<randomId> instagram",
  "phone_number": "1234567890",
  "pinterest": "<randomId> pinterest",
  "pinterest_email": null,
  "premiere_accepted": null,
  "premiere_invited": null,
  "pro_accepted": null,
  "pro_invited": null,
  "site_description": "<randomId>-site_description",
  "site_id": Any<Number>,
  "site_image": "<randomId>-site_image",
  "site_title": "Test title <randomId>",
  "snapchat": "<randomId> snaptchat",
  "state": "FL",
  "tiktok": "<randomId> tiktok",
  "twitter": "<randomId> twitter",
  "youtube": "<randomId> youtube",
  "zipcode": "776655",
}
`;

exports[`Profile Site Settings GET /api/v1/sites/:siteId/site_settings/profile_settings returns the site profile settings for an owner with only default settings filled in 1`] = `
{
  "accepted_terms_of_service": true,
  "accepted_terms_of_service_by": "Nice Person",
  "accepted_terms_of_service_on": "2023-05-10T12:37:38.000Z",
  "address1": null,
  "address_exists": false,
  "address_expired": null,
  "author_bio": "<randomId>-author_bio",
  "author_image": "<randomId>-author_image",
  "author_name": "<randomId>-author_name",
  "brand_color": null,
  "category_id": {
    "created_at": "2023-05-30T00:00:00.000Z",
    "iab_code": "IAB1",
    "id": 1,
    "parent_id": 1,
    "slug": "arts-and-entertainment",
    "title": "Arts & Entertainment",
    "updated_at": "2023-05-30T00:00:00.000Z",
  },
  "category_ids": [],
  "city": null,
  "contact_email": "<randomId>@example.com",
  "country": null,
  "country_of_operation": null,
  "facebook": null,
  "influencer_non_profit_rate": null,
  "influencer_non_profit_work": null,
  "instagram": null,
  "phone_number": "1234567890",
  "pinterest": null,
  "pinterest_email": null,
  "premiere_accepted": null,
  "premiere_invited": null,
  "pro_accepted": null,
  "pro_invited": null,
  "site_description": "<randomId>-site_description",
  "site_id": Any<Number>,
  "site_image": "<randomId>-site_image",
  "site_title": "Test title <randomId>",
  "snapchat": null,
  "state": null,
  "tiktok": null,
  "twitter": null,
  "youtube": null,
  "zipcode": null,
}
`;

exports[`Profile Site Settings PATCH /api/v1/sites/:siteId/site_settings/profile_settings accepts premiere invite 1`] = `
{
  "accepted_terms_of_service": true,
  "accepted_terms_of_service_by": "Nice Person",
  "accepted_terms_of_service_on": "2023-05-10T12:37:38.000Z",
  "address1": null,
  "address_exists": false,
  "address_expired": null,
  "author_bio": "<randomId>-author_bio",
  "author_image": "<randomId>-author_image",
  "author_name": "<randomId>-author_name",
  "brand_color": null,
  "category_id": {
    "created_at": "2023-05-30T00:00:00.000Z",
    "iab_code": "IAB1",
    "id": 1,
    "parent_id": 1,
    "slug": "arts-and-entertainment",
    "title": "Arts & Entertainment",
    "updated_at": "2023-05-30T00:00:00.000Z",
  },
  "category_ids": [],
  "city": null,
  "contact_email": "<randomId>@example.com",
  "country": null,
  "country_of_operation": null,
  "facebook": null,
  "influencer_non_profit_rate": null,
  "influencer_non_profit_work": null,
  "instagram": null,
  "phone_number": "1234567890",
  "pinterest": null,
  "pinterest_email": null,
  "premiere_accepted": true,
  "premiere_invited": true,
  "premiere_manage_account": null,
  "premiere_net_difference": 0,
  "pro_accepted": null,
  "pro_invited": null,
  "site_description": "<randomId>-site_description",
  "site_id": Any<Number>,
  "site_image": "<randomId>-site_image",
  "site_title": "Test title <randomId>",
  "snapchat": null,
  "state": null,
  "tiktok": null,
  "twitter": null,
  "youtube": null,
  "zipcode": null,
}
`;

exports[`Profile Site Settings PATCH /api/v1/sites/:siteId/site_settings/profile_settings accepts pro invite 1`] = `
{
  "accepted_terms_of_service": true,
  "accepted_terms_of_service_by": "Nice Person",
  "accepted_terms_of_service_on": "2023-05-10T12:37:38.000Z",
  "address1": null,
  "address_exists": false,
  "address_expired": null,
  "author_bio": "<randomId>-author_bio",
  "author_image": "<randomId>-author_image",
  "author_name": "<randomId>-author_name",
  "brand_color": null,
  "category_id": {
    "created_at": "2023-05-30T00:00:00.000Z",
    "iab_code": "IAB1",
    "id": 1,
    "parent_id": 1,
    "slug": "arts-and-entertainment",
    "title": "Arts & Entertainment",
    "updated_at": "2023-05-30T00:00:00.000Z",
  },
  "category_ids": [],
  "city": null,
  "contact_email": "<randomId>@example.com",
  "country": null,
  "country_of_operation": null,
  "facebook": null,
  "influencer_non_profit_rate": null,
  "influencer_non_profit_work": null,
  "instagram": null,
  "phone_number": "1234567890",
  "pinterest": null,
  "pinterest_email": null,
  "premiere_accepted": null,
  "premiere_invited": null,
  "pro_accepted": "accepted",
  "pro_invited": true,
  "site_description": "<randomId>-site_description",
  "site_id": Any<Number>,
  "site_image": "<randomId>-site_image",
  "site_title": "Test title <randomId>",
  "snapchat": null,
  "state": null,
  "tiktok": null,
  "twitter": null,
  "youtube": null,
  "zipcode": null,
}
`;

exports[`Profile Site Settings PATCH /api/v1/sites/:siteId/site_settings/profile_settings ignores additional fields passed in 1`] = `
{
  "accepted_terms_of_service": false,
  "accepted_terms_of_service_by": null,
  "accepted_terms_of_service_on": null,
  "address1": null,
  "address_exists": false,
  "address_expired": null,
  "author_bio": "<randomId>-author_bio",
  "author_image": "<randomId>-author_image",
  "author_name": "<randomId>-author_name",
  "brand_color": null,
  "category_id": {
    "created_at": "2023-05-30T00:00:00.000Z",
    "iab_code": "IAB1",
    "id": 1,
    "parent_id": 1,
    "slug": "arts-and-entertainment",
    "title": "Arts & Entertainment",
    "updated_at": "2023-05-30T00:00:00.000Z",
  },
  "category_ids": [],
  "city": null,
  "contact_email": "<randomId>@example.com",
  "country": null,
  "country_of_operation": null,
  "facebook": null,
  "influencer_non_profit_rate": null,
  "influencer_non_profit_work": null,
  "instagram": null,
  "phone_number": "1234567890",
  "pinterest": null,
  "pinterest_email": null,
  "premiere_accepted": null,
  "premiere_invited": null,
  "pro_accepted": null,
  "pro_invited": null,
  "site_description": "<randomId>-site_description",
  "site_id": Any<Number>,
  "site_image": "<randomId>-site_image",
  "site_title": "Test title <randomId>",
  "snapchat": null,
  "state": null,
  "tiktok": null,
  "twitter": null,
  "youtube": null,
  "zipcode": null,
}
`;

exports[`Profile Site Settings PATCH /api/v1/sites/:siteId/site_settings/profile_settings returns the updated profile settings for an owner of the site 1`] = `
{
  "accepted_terms_of_service": true,
  "accepted_terms_of_service_by": "Nice Person",
  "accepted_terms_of_service_on": "2023-05-10T12:37:38.000Z",
  "address1": "Updated address1 <randomId>",
  "address_exists": true,
  "address_expired": false,
  "address_verified_at": "<today>",
  "author_bio": "Updated author_bio <randomId>",
  "author_image": "Updated author_image <randomId>",
  "author_name": "Updated author_name <randomId>",
  "brand_color": "#000012",
  "category_id": {
    "created_at": "2023-05-30T00:00:00.000Z",
    "iab_code": "IAB10",
    "id": 7,
    "parent_id": null,
    "slug": "home-and-garden",
    "title": "Home & Garden",
    "updated_at": "2023-05-30T00:00:00.000Z",
  },
  "category_ids": [
    {
      "created_at": "2023-05-30T00:00:00.000Z",
      "iab_code": "IAB10",
      "id": 7,
      "parent_id": null,
      "slug": "home-and-garden",
      "title": "Home & Garden",
      "updated_at": "2023-05-30T00:00:00.000Z",
    },
    {
      "created_at": "2023-05-30T00:00:00.000Z",
      "iab_code": "IAB18",
      "id": 8,
      "parent_id": null,
      "slug": "style-and-fashion",
      "title": "Style & Fashion",
      "updated_at": "2023-05-30T00:00:00.000Z",
    },
  ],
  "city": "Updated city <randomId>",
  "contact_email": "Updated contact_email <randomId>",
  "country": "Updated country <randomId>",
  "country_of_operation": "US",
  "facebook": "Updated facebook <randomId>",
  "influencer_non_profit_rate": null,
  "influencer_non_profit_work": null,
  "instagram": "Updated instagram <randomId>",
  "phone_number": "Updated phone_number <randomId>",
  "pinterest": "Updated pinterest <randomId>",
  "pinterest_email": "Updated pinterest_email <randomId>",
  "premiere_accepted": null,
  "premiere_invited": null,
  "pro_accepted": null,
  "pro_invited": null,
  "site_description": "Updated site description <randomId>",
  "site_id": Any<Number>,
  "site_image": "Updated site_image <randomId>",
  "site_title": "Test title <randomId>",
  "snapchat": "Updated snapchat <randomId>",
  "state": "Updated state <randomId>",
  "tiktok": "Updated tiktok <randomId>",
  "twitter": "Updated twitter <randomId>",
  "youtube": "Updated youtube <randomId>",
  "zipcode": "Updated zipcode <randomId>",
}
`;

exports[`Profile Site Settings PATCH /api/v1/sites/:siteId/site_settings/profile_settings verifies the address even if no address fields change if verify_address is true 1`] = `
{
  "accepted_terms_of_service": true,
  "accepted_terms_of_service_by": "Nice Person",
  "accepted_terms_of_service_on": "2023-05-10T12:37:38.000Z",
  "address1": "address1 <randomId>",
  "address_exists": true,
  "address_expired": false,
  "address_verified_at": "<today>",
  "author_bio": "<randomId>-author_bio",
  "author_image": "<randomId>-author_image",
  "author_name": "<randomId>-author_name",
  "brand_color": null,
  "category_id": {
    "created_at": "2023-05-30T00:00:00.000Z",
    "iab_code": "IAB1",
    "id": 1,
    "parent_id": 1,
    "slug": "arts-and-entertainment",
    "title": "Arts & Entertainment",
    "updated_at": "2023-05-30T00:00:00.000Z",
  },
  "category_ids": [],
  "city": "city <randomId>",
  "contact_email": "<randomId>@example.com",
  "country": "country <randomId>",
  "country_of_operation": null,
  "facebook": null,
  "influencer_non_profit_rate": null,
  "influencer_non_profit_work": null,
  "instagram": null,
  "phone_number": "phone_number <randomId>",
  "pinterest": null,
  "pinterest_email": null,
  "premiere_accepted": null,
  "premiere_invited": null,
  "pro_accepted": null,
  "pro_invited": null,
  "site_description": "<randomId>-site_description",
  "site_id": Any<Number>,
  "site_image": "<randomId>-site_image",
  "site_title": "Test title <randomId>",
  "snapchat": null,
  "state": "state <randomId>",
  "tiktok": null,
  "twitter": null,
  "youtube": null,
  "zipcode": "zipcode <randomId>",
}
`;
